[package]
name = "lara-carbon"
description = "Lara Carbon — fluent date/time manipulation (Laravel Carbon equivalent)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
