[package]
name = "lara-core"
description = "Lara IoC container, Application lifecycle, and ServiceProvider system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
hyper.workspace = true
http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
