[package]
name = "lara-events"
description = "Lara event dispatcher, listeners, and broadcast system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
lara-core.workspace = true
