[package]
name = "lara-mail"
description = "Lara mailable classes, mail drivers (SMTP, Mailgun, SendGrid, Log), and global Mailer facade"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["smtp", "log-driver"]
smtp        = ["dep:lettre"]
log-driver  = []
mailgun     = ["dep:reqwest"]
sendgrid    = ["dep:reqwest"]
templating  = ["dep:minijinja"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# SMTP
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"], optional = true }

# HTTP-based drivers (Mailgun, SendGrid)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Templating
minijinja = { version = "2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
