[package]
name = "lara-middleware"
description = "Lara built-in middleware: CORS, throttle, auth, body-limit, etc."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
lara-core.workspace = true
lara-cache.workspace = true
