[package]
name = "lara-router"
description = "Lara HTTP router built on Axum with middleware, route groups, and model binding"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http.workspace = true
lara-core.workspace = true
lara-validator.workspace = true
