[package]
name = "lara-validator"
description = "Lara validation engine with 50+ rules, nested validation, and custom rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true
